# skse-clibng-template

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: BuildOptions.h.in  Plugin.h.in  addpluginsources.cmake  build.ps1  pluginconfig.cmake  pluginpackage.cmake  plugintarget.cmake
cmake/ports/commonlibsse-ng/: portfile.cmake
src/: GameEventHandler.cpp  GameEventHandler.h  Hooks.cpp  Hooks.h  PCH.h  Plugin.cpp  SkseMessagingListener.h  Util.h
